test/index.ts
import wx from '../dist'


// error
// wx.checkJsApi({
//     jsApiList: 1
// })


// success
// wx.checkJsApi({
//     jsApiList: ['addCard']
// })
